remove plex from kustomization

--- a/clusters/main/clusterenv.yaml
+++ b/clusters/main/clusterenv.yaml
@@ -1,44 +1,44 @@
-#ENC[AES256_GCM,data:Du5mmSu9wyGvPoaSzSKXH1PgLKTYcD32ovc5xAC8prGGoscp7ILvI0C3RkdR9IrvbO61aXMvfNkrhUuZpbra08A=,iv:IQFYwCbbVN5ys8T2dZmOfBPeF2XxEAvQ//n39hhKoW0=,tag:kwD8KdO0cP1SmdB3q/SSfQ==,type:comment]
-#ENC[AES256_GCM,data:q6lPi/F3GnuWCpdZ+UhFF/rqi+3X7vuHBviDNxGEvKIpqmtRQofHFkt8JAI=,iv:73xx/wiiek2r8AyVpzOhceRnEAR6BvdPVcTUBgBLGzg=,tag:+oPICSW/umVcXaqqzk0F2g==,type:comment]
-VIP: ENC[AES256_GCM,data:NPppRmGECoujA2RUJg==,iv:WJTL0umIfmIiNUPdT9WLDKD1rl8FkYGVpdU4sX+LgV8=,tag:kjBrG9kb5eQ1rBCtEFaWJA==,type:str]
-#ENC[AES256_GCM,data:bfcn2hw9BuARrGb3jVJi/oXh+dOrSWidtOwr,iv:ItCQcw75tEqZrKNUCg/L5BZfoXt+GxcY0ekinUF6yLQ=,tag:sPHFFysJZ8FTIEJ6ihU3Ng==,type:comment]
-#ENC[AES256_GCM,data:GW88RYGMnOH6F3erA7cL1rVsMsUvFaqjuDvEtHDLZfuMG1cQA5DQrZI2nlzLOMFQ0pkenqhgPsMkGiwMQ4BmpVCnHJtw0PCiMPssQnnROD7UaY6nmeyJIv0=,iv:N3zeqvRpqxDElN682Hjggp1FUFkKBabbyYLVatGxSJE=,tag:bgzSs7R2TByhs7lV8AWSCA==,type:comment]
-MASTER1IP: ENC[AES256_GCM,data:hbM2DIaeehebWCdXs4M=,iv:uvF7+oEB0aT9s9OGfGIV5giyE+v/NhIi2J9kU3TKbj8=,tag:ygDCvxxU+NzCe/lVv3lIEQ==,type:str]
-#ENC[AES256_GCM,data:ksYPoYBLZSTQlZgs53Jc9oE2HUfRI6cleNOfRmmFVB8Mpg==,iv:4vK0R9NivBJmSW6iextKq5zVnZYz2Otzl9hJs7PfGQg=,tag:sV4jGVRkGuuJsedxOeRlzQ==,type:comment]
-GATEWAY: ENC[AES256_GCM,data:ulOI8ZygEKYPuaJqsA==,iv:b6yaZ4RXf+jDJMycfTVhjZcpLOs4f3xVOnLwUsheEIA=,tag:w0Z0kCNb7eorl6FSBUOO9w==,type:str]
-#ENC[AES256_GCM,data:iLat/lWhqjYOHlPOF/C+V6DsweJLzt9evfzvKD0EPPo9gqk3E9EXhiAeNcFl020=,iv:X/4S3yGImMRD02ga1X6UY9Cjv+63gjeFjnqiZ3NWPwA=,tag:8qJ20MotSzOgKirXdjFgjQ==,type:comment]
-METALLB_RANGE: ENC[AES256_GCM,data:7QrsBhoOgG2xh4F9Bo15zHWVOlw7ZMG6C6o+l34p1Q==,iv:QY3wieAexjV4tQ0sQUxhrArDfrtO8/eds6g7EhXDu/Q=,tag:E94kv2pU0K/6Ww73zFwPeg==,type:str]
-#ENC[AES256_GCM,data:E34PsSyJm5RB7Mah1VzgGqSf5FBYAQmShnLWg+Slo9hvLed5a2kY7mPJmXrQmM00Ad+qIeVUS407qXc15DTxda/yeXhh2ags7LYZZNOb/8/f5A==,iv:+aI8oiBXoQKuQGaDNXpYy0BJRXq1n8v0+fjiBQaUTdc=,tag:b6l+sLQgiFiTnL6/G98vqg==,type:comment]
-TRAEFIK_IP: ENC[AES256_GCM,data:7ILBHOWG5xWlXIPxy6H8,iv:OKevgMGCMENbBMvVgySzcO2ZUPhXAf3XIkZuS9AVdE8=,tag:YhJ1/S+Yx4t/utBtq3keLw==,type:str]
-#ENC[AES256_GCM,data:LAFkBy/daZ3m/pFaUMKjQ4iNNcEueP+uhyyeRAgDwKx5,iv:XulveVJLLGgox6Q+lk9YxipfTSPekg+UgSNS0k9CJdI=,tag:TRWsGmjTNRtdn86PvhmtKw==,type:comment]
-BLOCKY_IP: ENC[AES256_GCM,data:ToxbHX0mJUrUP4bfMoSz,iv:6/jiLfpA2zMBNYj+WndGml9iDOGSgxXg0QuUW6VCKCo=,tag:ZffgWrCQ2V72pWEQwZJrqA==,type:str]
-#ENC[AES256_GCM,data:ZS1FEQy4eZy94D0tG5QNfFCcfm+RPSfHq9vb4WnZpN0MiguPkyBnbL3ZeMFSlgGdAwxxlxSjgMfwGlv9+XFnohUmHyrnuFq4r5Ve2SGRoK4=,iv:cvZGrSPR/T49AQ6UWVXkfV+0mCHZz+fwz/ks/Whe/Vs=,tag:jiNDZctK6DJXaXj6Rz8V8w==,type:comment]
-DASHBOARD_IP: ENC[AES256_GCM,data:cE0bGBrx/uP9gIPcDF/F,iv:clZk1JAK4HCRwAfodQUzhC+5Tqa8F3sv7J5BDpSPgMs=,tag:l9NK/ie0mNYb7hAtHnUo4g==,type:str]
-#ENC[AES256_GCM,data:VwpYfndM0yV/4hSI+pz8khJpmdtBfUbyyGNh+uhtvN+pPUtf9UagRgQa9E7RRWj3TP7wwrD2XdMfU2EGTaSkxAYoYXyRLudgr9WFziqCtZuW/AoFAf76,iv:w1OV33qmci91CqphBHjkGg0B4qUV6eI//uSqzfH2XI8=,tag:8LWHaV9C00dG8CXx4T/RwQ==,type:comment]
-#ENC[AES256_GCM,data:rm6+aeTAOlUC5JH1FciI0mxCc7hL0LnjsCFh0f86cRso2LtNYf35EQlX5ai0FttoLJo4LcjOoTwNBRONhcuuI23gDMHXd5bWATVzBFdgSpKukSUheUR1zTeyjR1LOU0pvmFcp1LVza0TvtXK52j1nw8Anfe3mKdwlcJMJQ==,iv:KvsYqLt4Wi1U7EUY4fU5wuOHT9fURibjaCsPVikXAS0=,tag:G/PKjPP3fQDj5Uj4fBPklg==,type:comment]
-#ENC[AES256_GCM,data:ENI/u70DvrKIqdF36wUdO1lHVJF8rGxl8Q//lFjbOAktX2ScZiBjfDU2PJer4HHnWxp4y9rLRXx+k76/aRyFAOSvM3jKWZ66nDym1VQ5GdY=,iv:qH9pfUbmbx58GAOKlSSJKJhNlCXYlr5ZBkcNC4exQ3c=,tag:spxHUa3KbmMClzNTQSBkyQ==,type:comment]
-#ENC[AES256_GCM,data:/RV+54WcT6wzRcyCfUR4p9N/ekj1xebvxSUeQv+CGaUPBVd/WichRekoQaARAfxYmG57SM+D,iv:Zqd63kp3Rg51dbItxf/hD3MTrMT+pBd2LAHDrDkG5d4=,tag:P9vZNof+JeS4l/+ogzc1fA==,type:comment]
-DOMAIN_0: ENC[AES256_GCM,data:/KjSLmRg3S0D4NW0,iv:wCoXgqywF3YUrIPU5ONNS4HxB0ABCRUPx5sWHmWhkqw=,tag:y7g9iScEu+PO+W721DF43A==,type:str]
-DOMAIN_0_EMAIL: ENC[AES256_GCM,data:UkCpeJRhmN5NCAvTHzPr8SM=,iv:5KGq3TftMvUVeXVZwDpqSfxTQD1o1TXEjAk706Za97I=,tag:ciYdBWPMM68vfMa2SLaiig==,type:str]
-DOMAIN_0_ZONE: ENC[AES256_GCM,data:Cw6F3C82G08i9OLB/QTdybhs4dyMIqcu8UKS2IwUzkw=,iv:fDRQrCV6H61EOBIpn/E6jCi7H7INEnuqHhfB24VGa00=,tag:MQdrKu4Pt0iSuO7qW5ASvQ==,type:str]
-DOMAIN_0_CLOUDFLARE_TOKEN: ENC[AES256_GCM,data:XYdrdlmv52LE/tvCTSi4pGHz81Nc4dXIW+XRzMunfs/RabUxwC1T+g==,iv:jTcIQl6KSs8xTmJ9OfKpjsWYWjQQtzeEKLKSlfBAqFk=,tag:Qib+essrs5+DEZpnON39gg==,type:str]
-#ENC[AES256_GCM,data:uOsg7IgOezsZSFOIb2sM+z/iYw93WSOL/lXwQiRgpkMrHH4uu6BFUTLmtWY1qzHWQQdBV4jxyXmMQ9A55yKGlA==,iv:3FJ3OsJHCnQ936Md6M9ZtLNHSp0INiS26GUmejbetQU=,tag:36d4UzwIXg1n+c7pxmIOJQ==,type:comment]
-#ENC[AES256_GCM,data:2Eppu6MifRxI/KT7HCeArv/uNEuZWnygJga2jkxWzbxX4eU3Mor0Opavg78E90Au8wKSR1sfcd4=,iv:abrRoRnna+nFEli+emHefrCmlTVO8Fa1yO0iXPgK308=,tag:UMrxjdp8J+TWVyYDFY5kuw==,type:comment]
-#ENC[AES256_GCM,data:afWJEL4tdG0P1CWaquo0KCmfsUuYu37T+g==,iv:RyrxyM0aokDxrBPZCeUAGu0snl1TtQZJ/1/L1emp3rU=,tag:5X2WkDHyyscVkQmulNgR7A==,type:comment]
-#ENC[AES256_GCM,data:5c3LZbyGnb3IRBhqO39twpahvznnA/qSVZ4iVmwOFPRkAfQyR2bDGd8QMxOzyrWFHG4wVyYB2uXCDcJbKRO0ksCgFzMfr4spdXJCYdM=,iv:fJAxNDSerNax/bJpNLhcioGfP7Vs8TVBVgLapd1rc7A=,tag:h3OyNSaQAYycbk2YHTMHiw==,type:comment]
-GITHUB_REPOSITORY: ENC[AES256_GCM,data:TDrvmxo2WXQnECP4/KGqql9w8YAxaMm3yHTpWvXKXWmMxEnFh4y+Qz/8VG7qPrrp,iv:JMVRLNwFPpEolty6pW11ri6unuauzhtmuSmzGnc7T/M=,tag:ULaKkpIORPuNySk1TxVhmQ==,type:str]
-#ENC[AES256_GCM,data:qWepptdqviCFISvh8cAxirGzs7Ei9qcyW+5i+tCf0ukEOQfVGGBmQNnP5PcaNe9+R8jalZkkF5ESfHznzwrw28YedDWE734=,iv:94SMQyexBjIDN3d10dMSvg0R2+v8/b0qXqm4ifzv/aY=,tag:/ofXTer+07AGvf4o/v8Drg==,type:comment]
-#ENC[AES256_GCM,data:pPUG3WD7Z1/tT2il38HIsLpQuZporYqB/1AKnooowmiw2Bo0sT7qRbt3RyV+7GoNp7+yWXtH,iv:pyvPDrS4DzWaEqeOJeJ6eoOuLWznHzGD4AjwztTV0VM=,tag:+/iZwtVqwAk3B57uR9VdKA==,type:comment]
-DOCKERHUB_USER: ENC[AES256_GCM,data:345udLpZEw==,iv:Bf47bmj+ghGrOwAHziFdlBEhK3lnA63pIno2jMQsS1g=,tag:EvLT9P1ryZTYTVFOyB2bcA==,type:str]
-DOCKERHUB_PASSWORD: ENC[AES256_GCM,data:3W/CXypRRC5zv75waKtgqSvBJRY=,iv:H91AQs1yIiZkkvcIIdqjyGeXJDODHgVX/LjrOjlQ0rI=,tag:W/H0uy9jGHI9rbWLplNlcA==,type:str]
-NFS_SERVER: ENC[AES256_GCM,data:rRlH3oJ0stxkRLU=,iv:4sgJJjCJtSnXdHLyzkIHpdy04JWZ9loPVx16k+L8VcQ=,tag:wl2KWzWZ6o3BequRJ1w0wA==,type:str]
-PLEX_IP: ENC[AES256_GCM,data:9Hwf17gThNgZJ2YwkPNv,iv:fFZhPLNx6mAmyEeUaMaiNi4/pvCpSi0I3IEFpzvIYzE=,tag:DvvccUhqbkiUG9iHxW7DxA==,type:str]
-BACKBLAZE_ACCESS_KEY: ENC[AES256_GCM,data:DXxzxUHOnQS8BOVrelJUTZB9wfxeDE3l/Q==,iv:vWesKxopGQ5x3D41cjIaJbQtZufaCDGykVuU81VVRS4=,tag:+CT8ZOn5B6z/Kf17zUv71w==,type:str]
-BACKBLAZE_SECRET_KEY: ENC[AES256_GCM,data:FmHEsi7z4kClVSPSs3nEEd3NQM/0i6Wn,iv:qVUyBG4L99cjQ1ls2TgVwgktvt3cOz0ITvLZDd4s7Ko=,tag:kNhgKy/tdQKFNdHrOEZeaQ==,type:str]
-BACKBLAZE_ENCR_KEY: ENC[AES256_GCM,data:VUDFTmGygWHU01AHQEhB0vxq,iv:cc/UQlrP+nRm35DQPxbVS5fEAS6PF6tRopLzRYqOUwg=,tag:vEgwMIUH3MF3MWWuogof+g==,type:str]
-#ENC[AES256_GCM,data:6HbKls+au0wwIbvJ3nQ=,iv:aiUwf6fWMF4PdjvYhduewJGv/RYg53rCH4x3k01/zHw=,tag:+Zh340fIF8/eoOa9xH9LNA==,type:comment]
-PODNET: ENC[AES256_GCM,data:U/c4uo9BROgGRBS46Q==,iv:cR9DIuRyR76LQ1TpFqxqvTM189qP7NRRH4MDpNllMco=,tag:ImO+IF5cXgAQgxowKGDjZw==,type:str]
-SVCNET: ENC[AES256_GCM,data:bzW2MtGso9rHaO26Qg==,iv:+Q3LEbLVba2GMuwLJJiVho3A9pfc5PaK+/aROxQEYeM=,tag:8q6enV63ojyxqYnWYDzE0w==,type:str]
+#ENC[AES256_GCM,data:jTsIxmckZHqwh8CHoo4TfpOaKwIakVzFUgMzWnOQ6x1isldmd+n9nJtSrlibU770qW2IsKB7pBwBga6bC9KPHvo=,iv:lqCo56NhX4bruItAuIGQhtanst7J2vH5srO1exlNw6c=,tag:sal8b/CgfgBg8lVU3vAfVg==,type:comment]
+#ENC[AES256_GCM,data:JPfiRall0f2fyN+1uCtoCvt/hNYXKrfz17uwJmn2TU7pG9+aPPZB/t9fpWs=,iv:kTlqpNaCaG3TFQQexZrBuhwjAQ+27ES8XpYOgwxEi74=,tag:5H7kUUN4Aw8ziOLJ1a9T3w==,type:comment]
+VIP: ENC[AES256_GCM,data:1RYa5dck9Nxpk/9XRg==,iv:17E/T3KYKREhnkqVjbCo6wyR7IKnNvo9boFCmHXxwGI=,tag:GedO7oLtVeKyX9J+Ubjgfg==,type:str]
+#ENC[AES256_GCM,data:Yv3UjOEIf4O3tHvj+jUffQptUQL6Q2C1UWcV,iv:D8+4l+2bASJHn0ygvW1DoL+RsgfxL3vk6iIx6hXaZfk=,tag:oYqifyQQZtikn8OUExLYkA==,type:comment]
+#ENC[AES256_GCM,data:KB7OywFQbulYl2IMBvaX63IX2AyF/faqFMe4Vh4p/fOVX3nPBR6eVkhmebe0GbFAQtZvtF4OyGaPfPe8zTmUe9yPQf4hVsaSaD4KsR7CwCJs5YDoIqVKALo=,iv:EBrV4qZ6jfo2zIPOLXDUM0y/a4mub0WndZKaKyKJ26Q=,tag:JJktg6gTq0IkduiM3xTOVw==,type:comment]
+MASTER1IP: ENC[AES256_GCM,data:vmU7jgrQltPpoEzUxc8=,iv:sfCwwzOB/CGhmiKFqDiW9o220gB7uPtU5lg/QgCZulg=,tag:IGRt8m6viY/XC4df7iM0QQ==,type:str]
+#ENC[AES256_GCM,data:rwrfLJeT3aFoV8mt/5NpkznWdzol2UoNJXwFHaA6iOG1LQ==,iv:O42ELkK9gaXWoi/D6BX7CDLkguTLedxMOlk5xguV898=,tag:fMelXR9gSKtbImfcyYOy2Q==,type:comment]
+GATEWAY: ENC[AES256_GCM,data:IMc4aj4S8JLFCRLXsw==,iv:2H1KXZrOjwdhBv6uqYdW/d7LgJIoOvxs/dXGNavcJ60=,tag:/XdYal/EEH8FbXTC5GNHXQ==,type:str]
+#ENC[AES256_GCM,data:y3iw+mrdVR1VKT3ijJbLkeu3vJdJek/zEAS3sTs3gRcAUhd0EcVO1atX7sdsOpQ=,iv:sSTuT/WuycuCrAaGTSAeZ697FoDN/lL0grvxhfA2rA0=,tag:uNyOoSc8XmQymvN7dkmPSg==,type:comment]
+METALLB_RANGE: ENC[AES256_GCM,data:TUUbfi+ITZy8y5wsa7RAyTOQ64d5TkTkQLRtMHDFIQ==,iv:3n0Jt0bvYPjwp4A8wueJrTV1FURFnsYoG1P7OHZ7ib8=,tag:QeXmDxhiDqmf2ANtRRKFSw==,type:str]
+#ENC[AES256_GCM,data:eqBj52AIFXRUIfvnzmV1kKnc7rNG7tGcubZJYrBKInO7XxXHwE+0ONScw+6n5+SSQ9oRuG4SrnNg1J2tTnH3PwNF60VGC4TpS2Z3FrtOeqVXaQ==,iv:lDb47lhNL4lYT6rR3sV2mio2mnVb7okzXsTIvhWwfTE=,tag:JDzA+X8Cw+EioNOOvxNuSA==,type:comment]
+TRAEFIK_IP: ENC[AES256_GCM,data:SeanhIUQIZ/0fKde5eT2,iv:VexTzDvcwkOO8QtCVsVWWgg62gT5eWL8JET4/8B1Fok=,tag:toIroK16ol4gQkHJZFfKcg==,type:str]
+#ENC[AES256_GCM,data:eYP6yyIWoxkHLLOCYHA4v75IricV7nVT2w/zZ8PttfFD,iv:xzxg8XN3qE+vpLc7mkCb6KeNxsAVicrn/+qgrSGGGho=,tag:3yzHaxt60Udmgk6Ht+ePow==,type:comment]
+BLOCKY_IP: ENC[AES256_GCM,data:Y4C3ZP0SXl7qN/PGSf+I,iv:+4ZmHy6aAMYhOXnk9v9PWA+YSH9/veGdYaugJsfaFWI=,tag:k8xVSAAuzPC8tW1Tfmh7eA==,type:str]
+#ENC[AES256_GCM,data:BAXd2XOmmZ4MJWgby5luSDUkgqqZYiXuDP5tiuJod/G86h/zCfcsVTPXO8JAQM/4wAlveJQAiQwOUDvGV5rAdaD/oZQ+cXNO7wBLQQJU2l0=,iv:MpW3g/uW1eob++HmQvDllgE/A4FOA2xF33kwirZi8gc=,tag:pQa3dyCisAZ0aKLsgILUGg==,type:comment]
+DASHBOARD_IP: ENC[AES256_GCM,data:+k5GRzJ9e88zchDR3C8G,iv:6xOKdazvWhi4XcS9qH1UTvMjIDpwnRFMGSBVLBA0WY4=,tag:oOFlzIJNQzp6x/6EiD1fsw==,type:str]
+#ENC[AES256_GCM,data:zhVtgWK4lhywyM1/bnjAc++RtpXT1eRjkuDPSks36kMlNbA9YcW4F/1iV/GEv5tQYtiyFBtXcm03g3Q3kdGVdElK8TTUhs7LeZOKAEPwFYN1ipBhyBuN,iv:QT3uixGNvokbZRJfq8xOsEWaPTO/J1GUcOUvKenAkqo=,tag:bAH8H68woamg+rx49suLVA==,type:comment]
+#ENC[AES256_GCM,data:vJSQ5PBiMW00NCR4q36owTl+SYjtiEonBBuQbOyDA3MJiFXEqck536CU3AMrrromlb2JIWpVJV+zo26bH6b2k5BC/w368Kc7szmkNAqrMDuumGFE5X6d6wyxePP/YUgIqARoW/QpGn8KzV2cIQCHHBeFoNqJYjwiCMEW6g==,iv:lPC+/qvtcTncC9oXmf6OJqc/y3chdqX+HvUjkpitR5s=,tag:GCUo9VLl/UdbM5GgpvZTdA==,type:comment]
+#ENC[AES256_GCM,data:6p8E9J+3hqZNYCnLNXsr4TbpcLWB3dTsFLutpvg2FOIojvncMsH9OB3EmhpgjoFnFMl6nh31XMU06Zfk1PVsWs5vIa4G/KzSoxRs89maIKs=,iv:txIBgsGthk4W4YWj4u48sc8fvw+IaLfHSRDpkFgtixc=,tag:BYtt26ftPlE5A1XKZ54Vvw==,type:comment]
+#ENC[AES256_GCM,data:9CVJyJpWdavYcNFbOiGmmk93GSUhS6XB8YugrM7GfUrKBbNw3+Vd8zr9mbHEIUznm7glSIIX,iv:C11QJ+3kd/yqEkV+jSPwO8gWTcouHi5ie2cZg4VnLVo=,tag:JODQwBahZt6cBnYHurMbdA==,type:comment]
+DOMAIN_0: ENC[AES256_GCM,data:GSML4hOlzxjWMoNc,iv:GzrzmVycd5aEiGI6iBg8NBFJl9JwXuyvKfNib+nuVtA=,tag:ND5z+WXvyjIwVg+J+BwDgw==,type:str]
+DOMAIN_0_EMAIL: ENC[AES256_GCM,data:X3oCzoSjt75enpgr7XTH7ck=,iv:exVSOed6KLnxeOuHamcYBYnqCRcM6/SL/15wuxHRkoM=,tag:bmVNBC1ZrirpPNgGhKcBlQ==,type:str]
+DOMAIN_0_ZONE: ENC[AES256_GCM,data:akMWCZd+gg/oHAmZSCa+e3pOpahu0tznmuEfOJj7aZ4=,iv:sJy61cimdpXuGER/tBhZvtNemu1C8/V4nMM8v3cAOJM=,tag:eMkbLy9G1euWYVU8612eJw==,type:str]
+DOMAIN_0_CLOUDFLARE_TOKEN: ENC[AES256_GCM,data:D/Ok+BlVL4T3iL/wDKlIRI/xz0Xeqztrb/xnENNOorid6vU/40ZD4A==,iv:4eWiZ1wcbwiIGqCQY0s7EGFzOVDYN4aWh2BxMRRGFJ8=,tag:Fav065fdNkF4Mh6U867kFg==,type:str]
+#ENC[AES256_GCM,data:Kxr9qfZna4f9vJEq3NAg9v5D/TD/+awfOlKxWozG8muJzNdtuPZb0ro4yJPypYvQb/FdveH3grgDvHXj/Ur5AQ==,iv:HsZX05NkzUN0Opt6C14/G0xN5soEmYW1qz1AZZrk164=,tag:p7ihJ7h1SpOdtKTPzOWltQ==,type:comment]
+#ENC[AES256_GCM,data:R8DV15IXr5uTvxYlpdrhNqbsFkhqGP+9jB7S0eiItFjxWICfihSI/LAemfyTE/3rE1+L0kW8hlQ=,iv:4UxlRf2gd/rjCnrjLRY/ezoEk6vXvodOv5w45GqZ2I4=,tag:nRBnt1qMq/WOqdUvEBOXLQ==,type:comment]
+#ENC[AES256_GCM,data:1SsitZ0bBgaqdFXeCinrFoGuERnsMvJOUQ==,iv:JNqQo5E1lzYVsOmGFUwyU7kIUeu3rU2sVT3l/3ZpCjo=,tag:O6GUCpKMlrHhVB3bAJ5bpg==,type:comment]
+#ENC[AES256_GCM,data:d9htNf6Q2E0Szc8LEL1LXMAjDJIymDDpCpXjALWfMFCOGRqoJS5dfGjzBxiP3S3AjW0qs9CwxMLAjzbpinCotogJjdVTRZFwDinNQyM=,iv:4d7YXq/3DhGkLddY5CuHTaxAWM3uPjVT7UXuhCyUKTo=,tag:yvYx9MwJWUS904WVVcLYAQ==,type:comment]
+GITHUB_REPOSITORY: ENC[AES256_GCM,data:7E+r3/NMBeKBqf2mfT5W2cw3HedRaBC0Dp3ahjDJ3t3573JoxqZM2Pf1BLIFU87Q,iv:lqQ6TiZ13cw9KfOEciIOpTk9RsmOw1wNdZiUGjZ+xWc=,tag:6UIMbJyGoDWGJZUxRZbAQQ==,type:str]
+#ENC[AES256_GCM,data:WzXnVJSRkBCCeGwHAn5nlfyvHg3n630gg5Livvnc6m4ZpDgt0SLPWDzA3lZJ4Rqmv17xEZTmmsT5bTq8nWzcnuJJLzHv8ss=,iv:2lr3q0WQja7WKZney1sGp5J2Ee/pkzmfN8Vwy8P1Qqk=,tag:tqkwURi0hF+6IDWq7FFiYQ==,type:comment]
+#ENC[AES256_GCM,data:IP9Nc8TEByvlxKohaaZGAuk97SNViPNIrwMm7Fa3zKKluix4mU/ADYySUm92CSvSQJGgigWy,iv:NGqNh4Zo9ijpnaMZtL+phnYQPjbiN9saNEqR0SCLozI=,tag:JtNmG0sVkva2zM4Dtp+tnQ==,type:comment]
+DOCKERHUB_USER: ENC[AES256_GCM,data:7p5/wQ8DnQ==,iv:IWAFtyCpZXhX3NUUdjzO4gxSn55OhRw3M1Nr5nvQB6M=,tag:gHTVTr4bJA2zYc3qkbbBlw==,type:str]
+DOCKERHUB_PASSWORD: ENC[AES256_GCM,data:F2dfrq02y1YcfOanYhgTjaFdcdI=,iv:cvl393rUJhTHq8FManXDQdacDNoIOewQQncoZcr6RlE=,tag:s19WRDPjzBo78giRmiL36w==,type:str]
+NFS_SERVER: ENC[AES256_GCM,data:NOiNp81fKtVlOS8=,iv:pUmrr/p8WsQSMt7ZDam7H+0uc/PzNi0SVdg8jBnYacs=,tag:LcB/fmWAJHelMLcjDaGD7Q==,type:str]
+PLEX_IP: ENC[AES256_GCM,data:m8hdaAvl18VeQjwCbnKp,iv:6Y6+MqrMO4pcR/KlQ6TqwbSkiJ9s5SdRWlEUtv1M9XE=,tag:uRC5pPQOuxYWCVgo7/GoyA==,type:str]
+BACKBLAZE_ACCESS_KEY: ENC[AES256_GCM,data:u3oImvgcLs8bgTABM2pIwTvy6p/NhSe+/g==,iv:IDcsNhsZ2lmQ4w4ioKXqlP6diwK8gZlftrVJ84NqN0Q=,tag:oq2VVcHvkbCN1nN2GWuGpg==,type:str]
+BACKBLAZE_SECRET_KEY: ENC[AES256_GCM,data:0zbXo8U12Smyp3oS5jVTKrepG8sGoakY,iv:bezXSTCxaPSxvFV03IzHw8AOgjr6DjnSc1Qe5jOc/sE=,tag:6Oq0Lhks0yp0EHDczilczw==,type:str]
+BACKBLAZE_ENCR_KEY: ENC[AES256_GCM,data:vXEOdlQV3dbOcrtl45DO2Nnz,iv:X/SgdtAh8RJxtMVIEDqLTfNipKXwRjQX3iVZaWjWAR4=,tag:rwHYPeW9w+mhP4/sa5pccQ==,type:str]
+#ENC[AES256_GCM,data:qeO2dZxjElpMs0t5EXE=,iv:nacDe3uIgHRv9hIh60bacua/phCeQaiNzsyOtoDWSXk=,tag:S4PczoiAt9h6c4Do0hRIOw==,type:comment]
+PODNET: ENC[AES256_GCM,data:Ik5agxPOBx1L7HRjqA==,iv:hHfSbcdGPw65795NF6ocOnXsB3bfGoSMi4kegyGCmQA=,tag:kJNzF6pAv49y/i4J3iS7YQ==,type:str]
+SVCNET: ENC[AES256_GCM,data:vWD178vQh9fwgOzlUQ==,iv:MxRFtfoayKCDMqqNRwpj5QqV2AtBMjby98nxEyFpW30=,tag:fPZzND/LSA6qXYVGOKK1AA==,type:str]
 sops:
     shamir_threshold: 3
     kms: []
@@ -49,13 +49,13 @@ sops:
         - recipient: age1xerwm86t75dl2v0sqq5xvzag5q6deawx5en7rqy92886049htaxqagw7yt
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBZQ0gzV0xNQ3YxdVc5RU1t
-            YTNCRHY2RUo1Rnkwd0hkV2tpS3kzbmkrUVI0CmtRdU5ONHVaNlMxUDh5NWtqbWVM
-            UU5JQWlmU2hCWEh2bzRadlRhakZobUkKLS0tIE1ScVRzdGxvTkVERmE2Y3ZCcVVw
-            bnZVQ0xTUE10eHZERXJHbVEyYmZKQU0Kmr/GIxDSoEeowa+KzsCt3CtppW0B2yMU
-            m4c7Cmapzf55mGVmEYFPbaZ8smZt71NLFpd8QyL+0NX8HCyM82Fdjg==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSA4djV5V2crTFpJT3NEZjU0
+            YWE2NWsyK24yalM5K3oxNDZhdmI2d2dnNlg4CkFJTGFXd2sxREdRUyt2em55eDdR
+            Z3A5em5takhOb0JET3JOYjhqTDVPS28KLS0tIHRwOC92SFVLUmZyMU0zNE52ZUkr
+            R0Q4R28zemNXOTczNTMxMEQ5TGlxV3cK5ejdVnccXqcgieTgKE1dW5TyDOoerifa
+            cWI+pJwBZCm8AnrjCaLxXKtdPQrtvSCTdijcoolUVnoMyMOSrkQvqw==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2025-01-09T15:07:55Z"
-    mac: ENC[AES256_GCM,data:SHoNoophE5Fzl7EJEhCZm3MMZcSgwu3u2YyNNgG9Ycq2RM6hrSfxSoJkFnxsY4VEvrWAaVoq+LlRKsnj5qQRnJoeZ7VHe5+0TZ980kIrV3ljki0TjJVhzw/OtOMGpe/Kg5bYlWCbisMlCId5ACJcXXWIp9HnQEBmYKmHRtsD26w=,iv:VjcRGCreTtLr8Tir/J5ChRnWYM+zrOh3q21UUcb3QmM=,tag:qBZFnibfDpNSKK8UnfZVKw==,type:str]
+    lastmodified: "2025-01-09T15:21:25Z"
+    mac: ENC[AES256_GCM,data:N548OEM6m1JiUyZugxqA9e9Tx5XsuROhp56dp3ATYntFovnvk68Xg/UdeEarqOp3Hrt6ZiGDBerHHJgpviFjhl5KTX7Fsct0yVqVZXeOdIAm114uBWy3PBrcC9DGGxaLi8GyLsrAoVH1zgu7NzqMRmIPv0aotTSkcFpl0MDoiHg=,iv:1iqw9uUP4fwW+kYN7XTibfJq5pu1QeHIWUQwPrVkI8E=,tag:It7sIpOzFuxGTtSFCqT3fw==,type:str]
     pgp: []
     version: 3.9.1
