--- a/clusters/main/kubernetes/flux-system/flux/clustersettings.secret.yaml
+++ b/clusters/main/kubernetes/flux-system/flux/clustersettings.secret.yaml
@@ -4,48 +4,48 @@ metadata:
     name: cluster-config
     namespace: flux-system
 data:
-    #ENC[AES256_GCM,data:yhC2Cd5nVGb5ya2x6+iQb3QN3xHxkqTqt8kL4TF55j2vi4vafPw5pw2G8oFRLRh8ICuQAjZcyTRYPF9TLdhM69Y=,iv:1WVHF8qTA9HEA2VVwdUITPXzxqMTQppXj+7w5Y65fko=,tag:gq4Ukp2njqw9/Z2+zv5zlw==,type:comment]
-    #ENC[AES256_GCM,data:07Eyut7FCeX81WxpaOsnPjxmbjJx6CJRlmQx2944/xMDkX+ghkRENekoViY=,iv:TS7lwVZ3o2PSUv2lEJMEr2Hgw/6SfHej8bGflKO1jCU=,tag:5hg3gDHvDlJbxaeZa7m3lQ==,type:comment]
-    VIP: ENC[AES256_GCM,data:1BnAGzM2NUL7IsA+Sg==,iv:cUnT53QKxgyMnUmCxlWjPWaluASsY8VdQ+NHd2FMMSA=,tag:oOQ896iRpD2aNn6y8DDPEg==,type:str]
-    #ENC[AES256_GCM,data:SpIdPro2aZlERWL3dluRpaetKqrcujNPxFmc,iv:aGHXEcS6kf1zrYrvGyWVx6d1f+1AmMwrt79BJYpHaVU=,tag:ej/Mhj1vOwAy3ei9aI/qUA==,type:comment]
-    #ENC[AES256_GCM,data:aBjHYejTTIS9DhgGfqChxTnmkWpEwAxcXTDTu92Rvu660nyuTQ61wKGB+jtzdLY/kinGyV88DeZW7A9Zw32YEmgmI8SCLtjCWdBcuhDiP99AdZqB/QNU8kQ=,iv:umLBD2DnTg/w5RzhokCdI1rUEMdTGwT/8mb4CiS7dOM=,tag:JeykSLsDNcFJrG7hLyaUnQ==,type:comment]
-    MASTER1IP: ENC[AES256_GCM,data:yeH/riKsKKJhiIFADDo=,iv:eP4XSmjNBptRhGlcdqGrr2TtGK/gs+eKJnZt6xfPu5A=,tag:EKC0AknYiXsHdeytOOyV1A==,type:str]
-    #ENC[AES256_GCM,data:1oXjT2ox4WxF7RDGTWgvrt+n9H8uOp+Bi2ZNjvYHzvScdw==,iv:1uUMrZ8JuR/RXYfeY0eAY8mKYAu8TI14KqlVZXOA7O8=,tag:ZJCvN/BbcfJXHD624pyITA==,type:comment]
-    GATEWAY: ENC[AES256_GCM,data:jd8kZQFkD3hsFyBDkw==,iv:0eA6TCANPC6uMzi8eWeIamdJ0NOO6B7lY7z1OujH7eE=,tag:XAfP5gTjBQaFcxgth8Mqeg==,type:str]
-    #ENC[AES256_GCM,data:amt/F+HccJrP1n1GFIpRrtWCV2o632gF43RlhcoIE2cwIzf1HTcT60Z2JRXUlec=,iv:BD9M1zx9r5qqSKPM4HHKsfONl1qkB6KmQRwA2IMw8nc=,tag:qEdJbft5/T8MKYLsTO3Eug==,type:comment]
-    METALLB_RANGE: ENC[AES256_GCM,data:7YsDx1qBuAZ/2q16UVFT3Zg3V5gD++5BN0/D98ALww==,iv:vZvyPQDWJLh7V2IjfYSm4/5+475xiXz3yjcgIA5iZEk=,tag:dSut77kUVHTX26nrVP8uvw==,type:str]
-    #ENC[AES256_GCM,data:vmnsJpacio8OoJv0UWzLWwiioZ5zswe33zkT5Z/HJgDUL+87jgrCBn2pV5F1s+Hbg6KlIYfA7JyRYgt2o1jFBJU47kO62Z812K7aSPjsXu5zMw==,iv:TtgjaHublJDAVueQfM1OZS/Ykx/SPVZgthzGQZ7nZBA=,tag:GERCPD+dhFzoCJ5ooAp8uw==,type:comment]
-    TRAEFIK_IP: ENC[AES256_GCM,data:BgJc5rG7hmwADTkyaeai,iv:eW1lnxDGYS66oMuKgFAMVjQ29mLh1P8TVLTeD2dRW6o=,tag:Wq+GnH1DlU9NZFI9wY3sZw==,type:str]
-    #ENC[AES256_GCM,data:FEVivWPaSiaHcwPm4ELrg5ENIUrY8BaTF8qJ19h+U/2C,iv:6n/xoVhxDKWWSQ/nFZB/smNUZkRWDH7V8fCFDPuJ0gw=,tag:XL9GQa9NtToYIWUvpYxoZA==,type:comment]
-    BLOCKY_IP: ENC[AES256_GCM,data:AKjif4DaP3ZHzbZJP9d9,iv:VwAx7e/UaGRPHAnvLgv+HFFh7kDAhbzzR5p+mWzLNGg=,tag:dJDNXEeddA/TcFZ/GQ2bsA==,type:str]
-    #ENC[AES256_GCM,data:/g0Wq13xj7ei+C2J4Nm/IbfVeTqUUbmoatOKgQiewRfZ7uK/Q2bytCn42VDnXN+ERz9PWY2mpbQDd7SMjmgeMK/93KpPliJ1BWkspDlz2Gc=,iv:RuGVFVzqFs30Ci+d7TjoB/G+EokiRE3w3vXXnaryd/k=,tag:RTl76lxuZ0ulaps3kRAFCQ==,type:comment]
-    DASHBOARD_IP: ENC[AES256_GCM,data:OaYSdv5phZT8cHI+duB/,iv:33z6Etrh8pmQgR9UjDyCqFE++2L8qiRzGr9dTnFxc8s=,tag:K/pLORuVf65IJfL5SFQn1w==,type:str]
-    #ENC[AES256_GCM,data:lz0Af26rITcXQ0yvOk5kc7MC7iAIHYExHEdTqlRklyzj2sMWEsvGMxfggDi1ceZ70sPm9/+ylEgTQD6mLamfjPZQAPM6f1GWsDBgYnVYBCJwRE5wSpVm,iv:yXBR5agN59HQHJZv8uvPsjWsMnEryb1izh3nNNAfk9Y=,tag:mzmUboBaoDt/91bQ98nOWA==,type:comment]
-    #ENC[AES256_GCM,data:/ztn7P5Bkiy/A4JxJqfSY7+jwDSlcpoil7yIWlBS9P+yu7mJ2eMb2gp33SeLmKpIlXOyDaSGp0GXfGmkSy4ZeCyTr9aPTzp18Y5KBLR1usQ82x/LGUwYBewcSO8vm/UhTcsOeQcCBF9p5xb3s3vsykIPFz0yUNYM1zjCKQ==,iv:x3u6bLpq9PaE4+1yWtWkNdQfFRmAGmr5l4MCnklzZVk=,tag:EvfMFVQb++zX/bsOo7UBog==,type:comment]
-    #ENC[AES256_GCM,data:Pmb09eYNlxTMwyyz53wvI9HTy1eh+i2hPLEq1kFVqiQxewK2BQlkisqcG13/FFty8l5YyI2sUfC59GCnMwHjJUVvo+w5GZLmCs3ooOjNzxk=,iv:Of4yOGJr+2coq5ttfPLjoBbKGa1F5usxGLCj+u0kqEU=,tag:xp7KfTq4WAg3JjQT5ih/Og==,type:comment]
-    #ENC[AES256_GCM,data:Cxf2SGdDTbKopUVN7DYoYVWIcJPMWAjVWu+GVtl2hjF2AYjtLF+5QsGrJ+9e5QjhcAzEk2s6,iv:3v9U49SxWdwxq+M4PPLR2UF9r66lfwPMK0j1oC6lJVo=,tag:1YBZtvSr/x9Qv2zdz0sStg==,type:comment]
-    DOMAIN_0: ENC[AES256_GCM,data:7a3mzgIXdh1fy6Af,iv:QUCLTo9Uxi81tTApwmR1mBayoQ+ozToPpjbbChieIR8=,tag:LQuLWYPJhkwRnUoxHl4Yvg==,type:str]
-    DOMAIN_0_EMAIL: ENC[AES256_GCM,data:XT7etgbK3uuerk1xSDG0tTE=,iv:5ITET+ufJXKIS/NGPEcvkz0aC6ZK+Xv8ORT0dnNaFP8=,tag:VudV0YkOYN9soqGzeKAJkg==,type:str]
-    DOMAIN_0_ZONE: ENC[AES256_GCM,data:HmCB5dRwl1sLzyRDgvFcPO8qv6LJB2pkGTUvbXbucU0=,iv:S12R/tdA+obV3G/M13YgpWFO0tXiba5Yu5LEmyDa550=,tag:RVSMHLkWrKv2bnvyETajoQ==,type:str]
-    DOMAIN_0_CLOUDFLARE_TOKEN: ENC[AES256_GCM,data:fIIHvs0ORPdgctJJZAyXyF2Ezr/aWViHMbpVomBN1e49Asxck6f8dg==,iv:mcOo6Ey15QPxdI69ac3Z98XixHJ9JKZLDbxnDb0pIq0=,tag:VALm71ZpEuhCBKIrU5DH0g==,type:str]
-    #ENC[AES256_GCM,data:vth+Rh4wjy70VgnWiPSlDIqTcAEGpBnM2caQf/bffFgJsdkgvfr+IUU5mlc4mO2UPdcYsoWVttZCUK06fwIKsA==,iv:64CSYI9XCRFFanDfTMyKHoeL0KU0kp+/9WKTZXgWPz8=,tag:iiN1MSVtwmzz6dLf1IPXgQ==,type:comment]
-    #ENC[AES256_GCM,data:1Lg7yuwJOqlblZodR28cHrtdbmy9lL0+cZaeStd91K7u7jgEUg93nCfuHvhAOh2q9F6Qx/HU1no=,iv:B1DcvZ+fQCZCjxc7V/2DcXK7PLq1NvNE4K8y2eiBCRA=,tag:ZK9nBWStnmZc+iYjHMRsMg==,type:comment]
-    #ENC[AES256_GCM,data:FqdWhp8oopgHkyH9fl2FliifdeTs1vUcvQ==,iv:xLCCjO7QXO1dgMTKKOfunKSEL5gy8aeIgEjUeyjgJ3U=,tag:i4dOqLweLXREjmZBSlrxLg==,type:comment]
-    #ENC[AES256_GCM,data:DmkugeObI7lN8iVFN4hTmZAQ/R22pOXoRmAA/x6HTKHJvV85Ka4x0GqHqsdikv9PWMAw4YxL6k03TwNv1K+rVa+974ANp9Aqiwb+eDw=,iv:O6Ie1/pQv86Z0E4+0X5/sWZ7FQaQmOWZSaLr567kW0w=,tag:YcSJlZV7B+f99nH/DwSFeQ==,type:comment]
-    GITHUB_REPOSITORY: ENC[AES256_GCM,data:5WKvoGxaQSt+vaf7nlIRZhhkdwqawZigb+I74lsgUl4hKYdlA3xv8CixOk3E8kT7,iv:4JaAsagIYQ7c7g/M5urpdx4pLQZWlqSejLpwn5iiZhU=,tag:PQuHlHWXlj37sgYvXBq9wQ==,type:str]
-    #ENC[AES256_GCM,data:2lKRVRftOe/BJnpxmoshJa90Ng0utjfUtZm/HHyozpnKZxPRn7qfHCjIxMJlO+Tt4XiTetwWVSX1mGS+RopVRQXVSdBgzhw=,iv:FP4Q+hBOUy5am2IQT2tfifB9VX5YH5ABqNybyDNKy+4=,tag:ct11II47R5W2KR9rnwNJxg==,type:comment]
-    #ENC[AES256_GCM,data:+rfL41AAWoHFx7tD62j66LBAyPeilq7qaJfg52XWiKnH02k1Qd0/Loy8XNmAYg1RflAMC72B,iv:MtbrMTeJK8MfpinQpP2nIhJF0PzBKJutwWuvn3urFfw=,tag:9OAZUZEiUgIhcGl6ibbjAQ==,type:comment]
-    DOCKERHUB_USER: ENC[AES256_GCM,data:2r/51HAE8A==,iv:d20MBuW+k2un6a1G6BD5jQQjJujD1hKDKBwLGN7eXU8=,tag:uclWwQ4YE4uxI4Oshb6jsw==,type:str]
-    DOCKERHUB_PASSWORD: ENC[AES256_GCM,data:ND78lt7ejqSo7pHeCpu2NXDbQeQ=,iv:RwBJNrBui/Sg4pfNit6UJ8i/O2OpRXunmreRv72/yPY=,tag:Z5NhdF4cQxRdnZGmtF5rqw==,type:str]
-    NFS_SERVER: ENC[AES256_GCM,data:3JqybUtTK0PlMHw=,iv:ykCI8KS3tDVcgfUfHNsvhtQxll/xisoPGOJL882Wfuo=,tag:jKOAYPVHX+GkRZkBXkLpJQ==,type:str]
-    PLEX_IP: ENC[AES256_GCM,data:9aQM27oNlViSLnJAFID+,iv:o0sQ3n9cdcapJ0TkeeVgrsxqsj76SotB/06PAH/y21A=,tag:cp6y9uf4xAf4V4v+qQkyYg==,type:str]
-    BACKBLAZE_ACCESS_KEY: ENC[AES256_GCM,data:lLYo+LB7b14Sc/6cl2u1sr25lOjS1SqqHA==,iv:Tv5CbyEL/fpIuflul3aVk3Y5LtqHFqsJ1gFWYfm6Dl8=,tag:0rRL9qAm10YFQ+/KjpNu2w==,type:str]
-    BACKBLAZE_SECRET_KEY: ENC[AES256_GCM,data:lWcxMeY8BbABcRkDtwf+54oVpS49R/oy,iv:/CNYE7M/A7MN/EcCrXyrk343vJTkyRBwMyYJXgR8XVg=,tag:9TwXf6c+L3+AiECjHtRtjw==,type:str]
-    BACKBLAZE_ENCR_KEY: ENC[AES256_GCM,data:BsssOsucB3SHleJcGgzNmAjI,iv:2Lm+sBaUcFDWYebTIe809Ac9KWywD4Lq0e+4o7pU57I=,tag:8IqGjI7E1aTbJcmm3pcddw==,type:str]
-    #ENC[AES256_GCM,data:k1SOmTSsMOqzRSSciXI=,iv:FU+lODwt99pqRDoVbae1Gk1UjPfk/Q1Ve5meOEuJgus=,tag:43lhuAD2urOtRfkXLRtwrg==,type:comment]
-    PODNET: ENC[AES256_GCM,data:Uf4tQ+9eT6CdOfAOog==,iv:L+9bx8ge/XNFq79CbZy3Cj39n1y/LgSPgFXfSdOLVIg=,tag:2s1SjkOKMDORokXTzDwQsQ==,type:str]
-    SVCNET: ENC[AES256_GCM,data:NHVhUvYPkW5JPDdNsQ==,iv:oWKpOtmNRAEp507iSmllbOf2Wsdy7vgdftcL+WA+VF0=,tag:zdqYr84vJ20O/D294j0JDg==,type:str]
-    CLUSTERNAME: ENC[AES256_GCM,data:zaYaww==,iv:zRas0C2Qy2uzc/meoHRJuYP7yLQuECmyv2J96fwCtoM=,tag:kLkEyVt53ZnhSraWX+PPLg==,type:str]
+    #ENC[AES256_GCM,data:foxYI5sy+Yl9t1O/Q35J0O9lBFKyMCgrkgZYbLu/GtvnihRhEeb3TBWMvd0u7jVPbGrbOPB1u5xOWooCGQRLrLs=,iv:+kxbrT/4Fc6N+Oazt1oEfnK5IP9joZWEXTHSg8GDGIQ=,tag:Z68gpYGs59O/qeP68bnRDQ==,type:comment]
+    #ENC[AES256_GCM,data:wiSidrgjFlfGeYiJ/oLcktfP0UMHooasSxH+WpCJqNMio89Squ3xMRTx404=,iv:31Iv2Y5x91oIeTyPMsfh6CIwnppx/B3pG/tdA6hGzcY=,tag:TIhTe4AZQizFYJSu5QNhCA==,type:comment]
+    VIP: ENC[AES256_GCM,data:cKku660qaJbEEC+eHA==,iv:2nCU65HJCEbN7drKxgfvj3nXEvuDfRBNcHG9HILg+NE=,tag:/K/h3DjN8J3PdKmSKQ4kGw==,type:str]
+    #ENC[AES256_GCM,data:bSRyo/XXKBpCvqscK92y590leYMoLpLxkGup,iv:vOH0KRizd/RKpbrNduqQTbWTrvOpr33eYKPtnJPTKnQ=,tag:yp0EEQMpKloWKyrWKaEWeg==,type:comment]
+    #ENC[AES256_GCM,data:FG/DmfqNlAdn1u8uef2GN2K6eKcl19MRDSFq3bQ/bj9HzIh29pF49Ops9xFDTmoe5iqg66B43UgY6UCgrhyWkr8l/6jAFP2AwF1Itn9l2mhlpuG9fo6CrWA=,iv:jGvkeYaEfqDSjzi2Kxxq1ICO+GN7xYHfDG1ARwvhIOA=,tag:4SmqaDS2ztnhmNvNh3cRkg==,type:comment]
+    MASTER1IP: ENC[AES256_GCM,data:AhEawLkvzFBPOUAM+Dc=,iv:0iTmDe7ouYfkH3/O5X63vTY2+ZKbpf9r8lZ69Nvof3s=,tag:Me26qGlkmUbGIfqofX/tcA==,type:str]
+    #ENC[AES256_GCM,data:HZAseC3GtwkeRs2Um/uB7bCM3pWIxvJUjuA1GFF42seWyg==,iv:N1T6g1TgxLDE63pjkL/f/XGv0mKeeeNQUROWw9q1N6I=,tag:lIO4+Cwg7uF/lADycP5SJA==,type:comment]
+    GATEWAY: ENC[AES256_GCM,data:GrkNmipNGl+7oDb2+w==,iv:U0YSP2o7qOZLlM9iO6sXEudkMTqYGsuPX6xXr3sTSRM=,tag:lIZaSAhHF3fjeKa8I1Y6FQ==,type:str]
+    #ENC[AES256_GCM,data:DQakbYLZ/H/eZYf9HQLqUAz7THxDBhrTxfbe76/Gtgqs8vdz4M9VR0+bjKz2/jg=,iv:ChI/psGQIbhWZDpVVAfGifMprgVcFxw/eQYdxFnuLKY=,tag:LIv0GZtXbaooAMlKhahzIA==,type:comment]
+    METALLB_RANGE: ENC[AES256_GCM,data:SAHj75+f1wLw4XypiNB9Xpm+lrWtOyR7U6Ktcf60tA==,iv:L9Q1O4RXa5rV8L9UZE/9SwDEuNCnW2ByHzpYIhkelGA=,tag:TeWSnK/TKu7QmFQ01ZJsRQ==,type:str]
+    #ENC[AES256_GCM,data:R2HgB2jjhugn+3fJC8dvMjoTqcGCB3P04Esx8PpWgRLMWe2b9sEzKT2Xwp084m2HXm5ywcqiE0DwPtET613DUHRbE9Qu5oLq6s9logE17tGldw==,iv:/ESWkYdT6YwiIxE2I1qT1td5nrtogfNzoFUOyrAA074=,tag:TXaI7MBlZ0YiFKCH89AJNg==,type:comment]
+    TRAEFIK_IP: ENC[AES256_GCM,data:bFwHfjksTU3ciOwhiouq,iv:mr+5hb5TRzWs4FhYjOGGSfVpXJ9KJixKFAM7VQJYVa0=,tag:6QKD+iZ/58iT2ExsV4JihA==,type:str]
+    #ENC[AES256_GCM,data:uAIb2DN7WPZJZX/0ZfIgONOoG7aRrHttOTccwZh+vxGn,iv:Cz/yJlE+3fA2uxzOcqLdCG3nv0qgBJCkWw4dbUWKbkQ=,tag:eEjziztEZnW0BoTupDZPiQ==,type:comment]
+    BLOCKY_IP: ENC[AES256_GCM,data:fqod6dfqk1g7ocUr9lKx,iv:mD/lz5Kdyi2skYltWn4m2lEnh8SmpTZhZj6M/tiSL0k=,tag:KmXAt9Ryu6e6C5iMM8DZKA==,type:str]
+    #ENC[AES256_GCM,data:Qla9odG17gwtCfRVlPDreMTr8V+xWGOM202TuzCWU17bf4eDQS00uq8owx1lbCSOdEuPqbFntOQClu0KyPZ2jQZjVR9QEzAc8pwuzngMYrc=,iv:hUUxUP5bpPHohvS+bZ1zJRWYBKdkT3fCHog0+GtCeVw=,tag:nrWrGlF0xqLlAt2K4Ry4BA==,type:comment]
+    DASHBOARD_IP: ENC[AES256_GCM,data:k2Wtl3BUIe9tORdZTX6t,iv:RSEKn6fbC2suAD/xe9qybZNOPWKLfn4GzA9Yn045YA4=,tag:+ZSG0dvGacTv6DCyDIFtXA==,type:str]
+    #ENC[AES256_GCM,data:yS/i326rFzA3z6tc3d/PGnVx13WVDDWhGjwt+XH23VkTPYNWo6Fd9DFUfahGxAWUZdlDqRq6gLQyYggxOunaMe5AAQQNVIHZkQrI+vdsHBdnjmP0YNWr,iv:T7+g4te12lbH3gCBRgFSbKR97FCB15QJbotSHMCQoD0=,tag:umuaQyuXIsrWYybbDGW3eA==,type:comment]
+    #ENC[AES256_GCM,data:PnmzcXPHyIHFm9dv9eWq/N3I+AMqvbT5WtxepDV43+6T2e/eOAF4jmZowX62LgCLl+QAW3aGJE4EV3ghYdXTs/S5L/TdH8SBXK2zetugHjcGcuYuXb6wavUNX//9nINl1ziXCFn9qZW8DjnLttsYyIOZE0xbo5N5K1l21Q==,iv:/YwdT00RmvSh44fEGuHFmTdy+KFkD6bHWFcCFrD4oLY=,tag:L6T/pqidzeJlqBKC/Mwr1Q==,type:comment]
+    #ENC[AES256_GCM,data:d2igzL1/vMmv0yDu8ii9CJZJ5ZdbfzLXYTBAzqI41FFWCi+sXAORI7TM1WvFUedbhoG8fvtlK7IUmK42eNYV0/Kz87pOLvvipBrOIZyiRuc=,iv:aZcuLYMwRzvRFY8hWXFt9mp5BMYDS+LuMmjuc6lUURs=,tag:WKK2wEjRcbdCQeA6auHYaw==,type:comment]
+    #ENC[AES256_GCM,data:5aI6gYaVEIm2KDDR6U1hjLXlPqB1ys8W8rx+r4KqrB0oaBKkgV+QiVacjQ4a9QJK1RrimJPy,iv:wbNkHVu/d0OLelTsZhpmZZmNyh10JPQt8C72xKMwCYU=,tag:XRKMgPgPrt2DKrM4HDV2Vg==,type:comment]
+    DOMAIN_0: ENC[AES256_GCM,data:aHS7lPXPca4pqACG,iv:bdVG4DCXuVcwsRXucSrRfdvhitW/nlJ+Maw9uRYwLrg=,tag:W4lHk49EYfqZJmONplR88w==,type:str]
+    DOMAIN_0_EMAIL: ENC[AES256_GCM,data:4NYcqoSBMBBxCYdKDLBldOg=,iv:VVapXF+glqVKPkTNPQ3J4X1fM+gHjY4QsP/9njeEPM0=,tag:IrgJH9qYiQ4wAgyDVSeVqQ==,type:str]
+    DOMAIN_0_ZONE: ENC[AES256_GCM,data:fdwvbJYYWIfWFcaVWFzkRCMykl9xg5ZpgQnyUxT/HaI=,iv:nGAMxUZbUchJLkH3sGb//PteA/szc8/lG2H0peEPz9s=,tag:M4lpszU3BchNUVC9sM6UPA==,type:str]
+    DOMAIN_0_CLOUDFLARE_TOKEN: ENC[AES256_GCM,data:Ns14aysYvsFLy+WYRJPJIK21Q2Y94lPYkasA3QS2SrQIthuanidceQ==,iv:Wm5BCLU57CK+xYyVuJIgpiPFxfXhH66kD3UqQpVkPrQ=,tag:wiMCvODlI1T+7MTlAjEGtw==,type:str]
+    #ENC[AES256_GCM,data:aW7YplQHD2Tk2Lupjopo2K6dU6EeQKbULNOxJt3pYo+0yrbB1tt0j8gyXYAZf3Q5As+6pVN0oJDZqlqINdYa+w==,iv:9qWrN8XmXybqxp5RoxCoxF/j+5LBnngz3AWe22Uh7KQ=,tag:wMbvvnBpYzVWWmgI5Ryf5A==,type:comment]
+    #ENC[AES256_GCM,data:2r9ay7jvoDOCDDAlBKFs/Ya/np7z0Sj2PqdLZQZ/VvFtLaaC/DQPFkj6tJeQLt7Mk+DjXU/87+s=,iv:o3MJZuuBc54884JwbFNs6loHSzFM2bCYJnE2+/AE3OM=,tag:z5SUOgHQqbcBDIaYn3orFQ==,type:comment]
+    #ENC[AES256_GCM,data:afFnw4ykelaj6Bl2Q684dtoKuosZ83c1lw==,iv:EUBOHk2FlMg8cjJgakKTPm044zfic/shkst298gi7TY=,tag:ckK256dLqFKYjdAlqIRXZA==,type:comment]
+    #ENC[AES256_GCM,data:fSc+LDJSNwIuCOc+RwqouHdMOLZvpiL6rIstt/GFqYwxxr8X3WhGQhsKUw+johKO/CXC5+/0esB97G0JR0DpTGTBRCD0T5Ol4PpxNJI=,iv:KjeViYVZfuwfWDV4Tj5kmSbU6GC/llCF0T5gKDAfMq4=,tag:H/PiCcgRGAIxmKKjzAM/ng==,type:comment]
+    GITHUB_REPOSITORY: ENC[AES256_GCM,data:6zejLW0PMQjDMraLFvZF+5liZF8KJEXgT7HH5Ap1nrfYaCoj/2ohszuBqR/1z3iz,iv:GhyQ2wwJOGM06IDTxFNZKyZnb0JyI34r0wzQ1tf2qrQ=,tag:4RBvs+4uxlQRm0jZk+quFg==,type:str]
+    #ENC[AES256_GCM,data:vVvNRm/l/mMt3/d0mw1iLgUMN9kqWFO+4E9w+MaMOy00MsiY8+CJQzNZZa+TwAcfB6pLIl+9DVSf7u1bFmu2LIehr4YJDxI=,iv:F1E5BHt9lzyfccEDezBSvIZUiGaAle/2x3U51aN8rz8=,tag:sdzHF+jw5EIIW+3DjoGuCw==,type:comment]
+    #ENC[AES256_GCM,data:4x1bhqRTjsBGYVaais6q1cQOTGa3l+pvm9S70xo7ltmSZCbfukY553GhVAyQY+j9ZErDfFmB,iv:okmuhYDe7GXpG6EWjJqb/DeQYibRbCA9QFvxvIu4auU=,tag:zDAUpVgo6TJsAn1ycRK0uA==,type:comment]
+    DOCKERHUB_USER: ENC[AES256_GCM,data:925tzXadEg==,iv:ULCPPVLFPK1vY8zcxa9OmC/I9GRWZRi4AZ4QooQRpD0=,tag:4f9aeIY3yHrKY+8hv8sFwQ==,type:str]
+    DOCKERHUB_PASSWORD: ENC[AES256_GCM,data:7HWvdEL7vror057gTmbOw65l31Q=,iv:32BJ0tJmBgsj9vVPHJ04En4tQYfXixpLXc12Uaa8t20=,tag:L7n98ybEsynbawPD+r7BXg==,type:str]
+    NFS_SERVER: ENC[AES256_GCM,data:0dpOdlNl3k8Hp7A=,iv:MIX8jAdUK05a1HCgEFqu/pFvuNa344M7AN6YIPW+4h0=,tag:JzIdy7sSdQK4J+h8D8WxLw==,type:str]
+    PLEX_IP: ENC[AES256_GCM,data:toMlJZkEzr31HVTOe/0C,iv:EClZ70rqL1LKFqP3XgDEAWRyNDwJAXSjUBIZYICbYcI=,tag:MxzRqogbxJzGV57Kx7VttQ==,type:str]
+    BACKBLAZE_ACCESS_KEY: ENC[AES256_GCM,data:c8scFXcRiXHA661DUQXEROXeip4rvekp9w==,iv:Jm+mvA0RCFq98KA81GLauoxfk8WOpnTS2fmOgLE4saQ=,tag:Od+6G+mgPgAfjP0YoIjd5Q==,type:str]
+    BACKBLAZE_SECRET_KEY: ENC[AES256_GCM,data:gA3lcsH4p1QHYITJ7YJiwbcV2UizI9b+,iv:9r9/dW5pVdH4zYFbHOCkYA2FTD6rnVZ7rtRis55oNVY=,tag:w5oSWdU91AmpeRNlC0wI+A==,type:str]
+    BACKBLAZE_ENCR_KEY: ENC[AES256_GCM,data:ZT79egbffzcVqsEaaX/wQEOw,iv:Eg0zax5p45jKF3Ntz8KaRvWbq5PA7mg2nZLH/bh0+X8=,tag:ZIJwznbrhp2a5Phk9t4oAQ==,type:str]
+    #ENC[AES256_GCM,data:8m9nWoFTL7STbt5AQbU=,iv:T2gWnG2/RxE2mDT9QIS1LYE/T2D5GxBZ81wrgcRE0w0=,tag:RiG+Lzp7jGnJOtPKCWLaTg==,type:comment]
+    PODNET: ENC[AES256_GCM,data:gtS4UeEXJ1DAp1F0Sg==,iv:deMHM/SSB8hV5qaFEPK7xI/SjzTxlBk5I/UVqoJ0c0I=,tag:rQFTFLDVQTYh+vFv2lyECQ==,type:str]
+    SVCNET: ENC[AES256_GCM,data:Nbzk8SYCO18uIhz9vg==,iv:nAztefWWqmSpIhUWuPZPk5k7Jlo4JCvknFfqwfNQ3Yw=,tag:ASD+INFRrjzXuF5NAEmprA==,type:str]
+    CLUSTERNAME: ENC[AES256_GCM,data:mwDj1Q==,iv:IB+keBiVJXIfcSp6xD/RXZCiq772rbsCFPrrglm1I1s=,tag:VYzRmqTRsRTtFIDEoP1K9w==,type:str]
 sops:
     shamir_threshold: 3
     kms: []
@@ -56,14 +56,14 @@ sops:
         - recipient: age1xerwm86t75dl2v0sqq5xvzag5q6deawx5en7rqy92886049htaxqagw7yt
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBhdkdJZW9NQjdqNUhhMlpn
-            YXhoSElQRFYxeXNXL3d0b2JIL3I0cm9nZFd3Ci8zbktoSkZuaWN0MWlMMk5yNit0
-            NmNZYXVYUXlTL3psMDRuKzdIc2d4TDAKLS0tIFBzR0xUVzdHZTV5Mit4MDdwUEVr
-            THkvRTBaWVM4YjhldVp6UFFydkZvcW8KUiLg2MMQ/PWxVzr9ik1weCbqe8Kz4dh/
-            JyQjddKT4dtQMAF82SxMG1FVjMt2ysjGrCAH+DXuAZvakG1054nZeQ==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBmcDByWjJwamtIeFF2bm4y
+            WFRSOWZTUklaT01aZzlrZVZubENEaHdMdWwwCi9Feks4S29wVXlmTGhTOS9vK3BP
+            a1lRK3ZmVDRSWCtvY0liWkJUZFhUb28KLS0tIGdVSEJOVGp6NkNJb2doTnpWZUYv
+            Sks0eUM4UFhMei9wSTE5Vm5Vd2xWaVEKzuUGzyWVv9POAoXC0kpxdJ1pkadPaQdl
+            bNARo2S5UPH4qKUt2Eg0PMG093opabpV7/8Aw/Q+4DURKpy5c/rhBw==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2025-01-09T15:07:55Z"
-    mac: ENC[AES256_GCM,data:jYLi1EXDDDfS3CtvB7klb3mn+0+YyNvAggN95unMTbBX9GCJ1liz1LBzI7+LzGeHTeEKrU9AO1JCQVkRorI0Z7lxwGLhJ2TKwzx09V91qibLwU3SCat441zIDTwfcZsPv8XhmpztDbK+D+kSxSXAGx8KOkmS92cdb/DGZDJxH/o=,iv:O+y1F6dWFeh849zQ22nkOgJ0oUO1L91HPk3qlaqZhK4=,tag:thG9tRcOhRAWA5yk/uQacA==,type:str]
+    lastmodified: "2025-01-09T15:21:25Z"
+    mac: ENC[AES256_GCM,data:t7e7s1OlVc0yBSYrobU9EUe5M5b1w5dacL/6uLvIUxWFj8G0y7gMNWmbekPmye6KhMaJ3OW1oSoL0Aw7uO4I9sM2/6eFnRIZKSnG2uaIsTKt2TTbLSz1qMEGK5vnImJ4YO+RGa2Zak4DGH8ixyG39Ycr0Fi2/WznFWJhgaMocZ0=,iv:dZeN+YCrBgNyuYNoltppzZxeWpv0QP2PJZ3BmOERFaM=,tag:wftbgR73p5Mj+kl3nqVRVg==,type:str]
     pgp: []
     encrypted_regex: ((?i)(displayname|email|pass|ca|id|bootstraptoken|secretboxencryptionsecret|secrets|secrets|password|cert|secret($|[^N])|key|token|^data$|^stringData))
     version: 3.9.1
